--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^4.1.2"
+    "react-router": "^4.1.2",
+    "react-scroll-to-component": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
